horizontal scroll issue

--- a/src/styles/partials/_creatures.scss
+++ b/src/styles/partials/_creatures.scss
@@ -1,6 +1,8 @@
 @import '_variables.scss';
 
 .creatures {
+  width: 100vw;
+  overflow-x: hidden;
   position: absolute;
   height: 11000px;
 
