--- a/src/styles/partials/_setup.scss
+++ b/src/styles/partials/_setup.scss
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6, p, ul {margin: 0}
 ul {padding: 0; list-style-type: none}
 a {text-decoration: none;color: #000;display: inline-block}
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   overflow-x: hidden;
 }
